apps/frontend/astro/k8s/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels:
    kubernetes.io/metadata.name: internal
    name: internal
